# bluecam

./: .gitignore  CMakeLists.txt  FindJPEG.cmake  README.md  moose.c  notes.txt  utility.cpp  utility.hpp  videoserver.c  videoserver.cpp
arduino/bluetooth-programming/: bluetooth-programming.ino
arduino/dashcam/: dashcam-bluetooth.ino  dashcam.ino
arduino/incompatible-bluetooth-dashcam/: incompatible-bluetooth-dashcam.ino
arduino/libraries/ArduCAM/: ArduCAM.cpp  ArduCAM.h  memorysaver.h  ov2640_regs.h
resources/: output-blurred.pgm  output-color.ppm  output-edges-nonmax.pgm  output-edges-otsu-hysteresis.pgm  output-edges-sobel.pgm  output-gray.ppm
videoserver/Application/: build.gradle
videoserver/Application/src/main/: AndroidManifest.xml
videoserver/Application/src/main/java/com/example/android/videoserver/: BluetoothChatFragment.java  BluetoothChatService.java  Constants.java  DeviceListActivity.java  MainActivity.java
videoserver/Application/src/main/res/values/: base-strings.xml
